# vector-db

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Roadmap.md  benchmark-report.html  benchmark-results.json  lsh-benchmark-report.html  lsh-benchmark-results.json
benchmarks/: CMakeLists.txt  README.md  batch_search_benchmarks.cpp  benchmark_utils.cpp  benchmark_utils.hpp  generate_report.py  insert_benchmarks.cpp  lsh_recall_benchmarks.cpp  persistence_benchmarks.cpp  search_benchmarks.cpp  test_generate_report.py
docs/: BENCHMARKS.md  Benchmarks_TODO.md  IMPLEMENTATION_TODO.md  LSH_TODO.md
include/vectordb/: collection.hpp  distance.hpp  types.hpp  vector_store.hpp
include/vectordb/indexes/: flat_index.hpp  index.hpp  random_projection_lsh_index.hpp
src/: collection.cpp  distance.cpp  vector_store.cpp
src/indexes/: flat_index.cpp  index_utils.cpp  index_utils.hpp  random_projection_lsh_index.cpp
src/io/: collection_io.cpp
tests/: CMakeLists.txt  batch_search_tests.cpp  collection_tests.cpp  distance_tests.cpp  flat_index_tests.cpp  persistence_tests.cpp  random_projection_lsh_index_tests.cpp  vector_db_tests.cpp  vector_store_tests.cpp
